# SR-Tesseler

./: CMakeLists.txt  README.md
src/: Camera2D.cpp  Camera2D.hpp  DBScan.cpp  DBScan.hpp  DetectionCleaner.cpp  DetectionCleaner.hpp  DetectionCleanerGLViewer.cpp  DetectionCleanerGLViewer.hpp  DetectionCleanerWidget.cpp  DetectionCleanerWidget.hpp  DetectionSet.cpp  DetectionSet.hpp  FilterObjectWidget.cpp  FilterObjectWidget.hpp  GeneralTools.cpp  GeneralTools.hpp  Geometry.cpp  Geometry.hpp  Histogram.cpp  Histogram.hpp  HistogramCamera.cpp  HistogramCamera.hpp  ImageViewer.cpp  ImageViewer.hpp  KRipley.cpp  KRipley.hpp  LoaderDetectionSet.cpp  LoaderDetectionSet.hpp  MainFilterDialog.cpp  MainFilterDialog.hpp  MiscFilterWidget.cpp  MiscFilterWidget.hpp  MiscQuantificationWidget.cpp  MiscQuantificationWidget.hpp  MoleculeInfos.cpp  MoleculeInfos.hpp  NeuronObject.cpp  NeuronObject.hpp  ObjectInterface.hpp  Palette.cpp  (+22 more)
src/Resources/: resource.h
src/images/unused/: PALM.TIF
src/qcustomplot/: QCPBarsWithColors.cpp  QCPBarsWithColors.h  QCPHistogram.cpp  QCPHistogram.h  QCPStringLegendItem.cpp  QCPStringLegendItem.h  qcustomplot.cpp  qcustomplot.h
